メール本文、Workds記述変更

--- a/donatello.com/business/index.html
+++ b/donatello.com/business/index.html
@@ -22,7 +22,7 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>	
 <![endif]-->
       <title>BUSINESS 事業内容 | Donatello 東京のSES、システム開発、エンジニア育成</title>
-      <meta name="keywords" content="東京システム開発,SES,エンジニア">
+      <meta name="keywords" content="東京,システム開発,Java,求人,新卒採用,エンジニア">
       <meta name="description" content="ディスクリプション">
       <meta property="og:title" content="og title">
       <meta property="og:site_name" content="og sitenmae">
@@ -467,7 +467,7 @@
                   <address class="address">
                      東京都港区白金1-15-29 天翔白金ビル203 <a href="https://goo.gl/maps/wRooUCdp5B82" target="_blank"><i class="icon-address"></i></a>
                   </address>
-                  <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】  %0d%0a%0d%0a【お名前】%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry">
+                  <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a / %0d%0a%0d%0a【お名前】%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry">
                      <button role="link" >
                         システム開発、SESのお問い合わせ
                      </button>
