--- a/donatello.com/works/index.html
+++ b/donatello.com/works/index.html
@@ -26,7 +26,7 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>	
 <![endif]-->
       <title>WORKS 実績 | Donatello 東京のSES、システム開発、エンジニア育成</title>
-      <meta name="keywords" content="東京システム開発,SES,エンジニア">
+      <meta name="keywords" content="東京,システム開発,Java,求人,新卒採用,エンジニア">
       <meta name="description" content="ディスクリプション">
       <meta property="og:title" content="og title">
       <meta property="og:site_name" content="og sitenmae">
@@ -202,13 +202,18 @@
                               官公庁向けシステム開発
                            </h3>
                            <article class="work_detail_content">
-                              テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                              <ul>
+                                 <li>航空関連システム</li>
+                                 <li>企業情報登録システム</li>
+                                 <li>車両関連システム</li>
+                                 <li>入札関連システム</li>
+                              </ul>
                            </article>
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <!-- <a href="" class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
-                           </a>
+                           </a> -->
                         </li>
                         <li class="work_detail">
                            <div class="work_detail_icon">
@@ -218,13 +223,15 @@
                               ポータルサイト運営
                            </h3>
                            <article class="work_detail_content">
-                              テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                              <ul>
+                                 <li>各種情報提供サイト運用</li>
+                              </ul>
                            </article>
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <!-- <a href="" class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
-                           </a>
+                           </a> -->
                         </li>
                         <li class="work_detail">
                            <div class="work_detail_icon">
@@ -234,13 +241,15 @@
                               受注サポートシステム
                            </h3>
                            <article class="work_detail_content">
-                              テキストご支給テキストご支給テキストご支給テキストご支給テキスト
+                              <ul>
+                                 <li>自社パッケージ開発中</li>
+                              </ul>   
                            </article>
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <!-- <a href="" class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
-                           </a>
+                           </a> -->
                         </li>
                      </ul>                     
 
@@ -270,13 +279,15 @@
                            顧客管理システムの構築
                         </h3>
                         <article class="work_detail_content">
-                           テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                           <ul>
+                              <li>NPO法人様向け管理システム</li>
+                           </ul>
                         </article>
-                        <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                        <!-- <a href="" class="button -viewCasestudy -comingsoon">
                            <button role="link" >
                               COMING SOON
                            </button>
-                        </a>
+                        </a> -->
                      </li>
                      <li class="work_detail">
                         <div class="work_detail_icon">
@@ -286,13 +297,15 @@
                            帳簿システムの構築
                         </h3>
                         <article class="work_detail_content">
-                           テキストご支給テキストご支給テキストご支給テキストご支給テキスト
+                           <ul>
+                              <li>公的書類等生成サポートシステム</li>
+                           </ul>
                         </article>
-                        <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                        <!-- <a href="" class="button -viewCasestudy -comingsoon">
                            <button role="link" >
                               COMING SOON
                            </button>
-                        </a>
+                        </a> -->
                      </li>
                   </ul>                     
                </div>
@@ -323,7 +336,7 @@
                       <!--                           <article class="work_detail_content">
                          テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
                       </article> -->
-                      <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                      <a class="button -viewCasestudy -comingsoon">
                         <button role="link" >
                            COMING SOON
                         </button>
@@ -339,7 +352,7 @@
                            <!-- <article class="work_detail_content">
                               テキストご支給テキストご支給テキストご支給テキストご支給テキスト
                            </article> -->
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <a class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
@@ -444,7 +457,7 @@
            <h3>システム開発、SES、ウェブサイト制作に関するご相談はこちらから</h3>
         </header>
         
-<a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】%0d%0a  %0d%0a【お名前】%0d%0a%0d%0a【ご連絡先】%0d%0aお電話： / メール：%0d%0a%0d%0a【ご連絡可能な時間帯】%0d%0a可能：○○時〜○○時 / 不可：○○時〜○○時%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry -toEnter"><button role="link" >SESや各種製作についてお問い合わせ</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
+<a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a /  %0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry -toEnter"><button role="link" >SESや各種製作についてお問い合わせ</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
         <aside class="toEntry_attention">
            メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
            いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
@@ -478,7 +491,7 @@
                   <address class="address">
                      東京都港区白金1-15-29 天翔白金ビル203 <a href="https://goo.gl/maps/wRooUCdp5B82" target="_blank"><i class="icon-address"></i></a>
                   </address>
-                  <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】  %0d%0a%0d%0a【お名前】%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry">
+                  <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a / %0d%0a%0d%0a【お名前】%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry">
                      <button role="link" >
                         システム開発、SESのお問い合わせ
                      </button>
