--- a/donatello.com/inquiry/index.html
+++ b/donatello.com/inquiry/index.html
@@ -22,7 +22,7 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>	
 <![endif]-->
       <title>INQUIRY お問い合わせ | Donatello 東京のSES、システム開発、エンジニア育成</title>
-      <meta name="keywords" content="東京システム開発,SES,エンジニア">
+      <meta name="keywords" content="東京,システム開発,Java,求人,新卒採用,エンジニア">
       <meta name="description" content="ディスクリプション">
       <meta property="og:title" content="og title">
       <meta property="og:site_name" content="og sitenmae">
@@ -191,7 +191,7 @@
                   <div class="toEntry ef ef-floatup">
                      <div class="wrap">
                         
-<a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】%0d%0a  %0d%0a【お名前】%0d%0a%0d%0a【ご連絡先】%0d%0aお電話： / メール：%0d%0a%0d%0a【ご連絡可能な時間帯】%0d%0a可能：○○時〜○○時 / 不可：○○時〜○○時%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry -toEnter"><button role="link" >お問合わせはこちら</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
+<a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a /  %0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry -toEnter"><button role="link" >お問合わせはこちら</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
                         <aside class="toEntry_attention">
                            メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
                            いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
@@ -229,7 +229,7 @@
                   <address class="address">
                      東京都港区白金1-15-29 天翔白金ビル203 <a href="https://goo.gl/maps/wRooUCdp5B82" target="_blank"><i class="icon-address"></i></a>
                   </address>
-                  <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】  %0d%0a%0d%0a【お名前】%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry">
+                  <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a / %0d%0a%0d%0a【お名前】%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry">
                      <button role="link" >
                         システム開発、SESのお問い合わせ
                      </button>
