--- a/donatello.com/works/index.html
+++ b/donatello.com/works/index.html
@@ -52,47 +52,38 @@
       <p class="siteHeader_logo">
          <a href="../">
             <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="150px" height="20px" viewBox="0 0 150 20" xml:space="preserve">
-               <g>
                   <g>
-                     <path class="st0" d="M14.4,4.9L8.8,1.7C8.5,1.6,8.1,1.5,7.7,1.5c-0.4,0-0.8,0.1-1.1,0.3L1.1,4.9C0.5,5.3,0,6.1,0,6.8v6.4
-                        c0,0.7,0.5,1.5,1.1,1.9l5.6,3.2c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0,0.8-0.1,1.1-0.3l5.6-3.2c0.6-0.3,1.1-1.2,1.1-1.9V6.8
-                        C15.4,6.1,14.9,5.3,14.4,4.9z M11.9,12.4l-4.2,2.4l-1.3-0.8V6l1.3-0.8l4.2,2.4V12.4z"/>
+                     <path d="M14.2,4.7l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3C0.5,5.1,0,6,0,6.9v5.9c0,0.9,0.5,1.8,1.3,2.3l5.1,3
+                        c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l5.1-3c0.8-0.5,1.3-1.4,1.3-2.3V6.9C15.5,6,15,5.1,14.2,4.7z M12.1,12.4l-4.3,2.5
+                        v-10l4.3,2.5V12.4z"/>
+                     <path d="M25,18.5c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V6.9c0-0.9,0.5-1.8,1.3-2.3l5.1-3
+                        c0.8-0.5,1.8-0.5,2.6,0l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3v5.9c0,0.9-0.5,1.8-1.3,2.3l-5.1,3C25.9,18.3,25.5,18.5,25,18.5z M20.7,12.4
+                        l4.3,2.5l4.3-2.5v-5L25,4.9l-4.3,2.5V12.4z M29.8,12.2C29.8,12.2,29.8,12.2,29.8,12.2L29.8,12.2z"/>
+                     <path d="M98.5,8.4h2.9c0.1,0,0.3-0.1,0.3-0.3V7.2c0-0.9-0.5-1.8-1.3-2.3L95.3,2c-0.8-0.5-1.8-0.5-2.6,0l-5.1,2.9
+                        c-0.8,0.5-1.3,1.4-1.3,2.3v5.9c0,0.9,0.5,1.8,1.3,2.3l5.1,2.9c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l5.1-2.9
+                        c0.8-0.5,1.3-1.4,1.3-2.3v-0.8c0-0.1-0.1-0.3-0.3-0.3h-2.9c-0.1,0-0.3,0.1-0.3,0.3v0.4L94,15.1l-4.3-2.5v-0.7
+                        c0.1,0,0.1,0.1,0.2,0.1H95c0.3,0,0.5-0.2,0.5-0.5V9c0-0.3-0.2-0.5-0.5-0.5h-5.1c-0.1,0-0.2,0-0.2,0.1V7.7L94,5.2l4.3,2.5v0.5
+                        C98.2,8.3,98.4,8.4,98.5,8.4z"/>
+                     <path d="M142.2,18.6c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l5.1-3
+                        c0.8-0.5,1.8-0.5,2.6,0l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3V13c0,0.9-0.5,1.8-1.3,2.3l-5.1,3C143.2,18.5,142.7,18.6,142.2,18.6z
+                         M137.9,12.5l4.3,2.5l4.3-2.5v-5L142.2,5l-4.3,2.5V12.5z M147,12.3C147,12.3,147,12.3,147,12.3L147,12.3z"/>
+                     <path d="M83.3,4.7l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3c-0.8,0.5-1.3,1.4-1.3,2.3v2.7c0,0.3,0.2,0.5,0.5,0.5H72
+                        c0.3,0,0.5-0.2,0.5-0.5V7.4l2.6-1.5v12.1c0,0.3,0.2,0.5,0.5,0.5H78c0.3,0,0.5-0.2,0.5-0.5V5.9l2.6,1.5v2.2c0,0.3,0.2,0.5,0.5,0.5
+                        h2.4c0.3,0,0.5-0.2,0.5-0.5V6.9C84.6,6,84.1,5.1,83.3,4.7z"/>
+                     <path d="M111.2,18.6c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l2.4-1.4
+                        c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1c0.1,0.2,0.1,0.6-0.2,0.7l-1.9,1.1v5l4.3,2.5l4.7-2.7c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1
+                        c0.1,0.2,0.1,0.6-0.2,0.7l-5.1,3C112.1,18.5,111.6,18.6,111.2,18.6z"/>
+                     <path d="M67.4,7.1c0-0.9-0.5-1.8-1.3-2.3l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3c-0.8,0.5-1.3,1.4-1.3,2.3V13
+                        c0,0.9,0.5,1.8,1.3,2.3l5.1,3c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l3-1.7v1c0,0.3,0.2,0.5,0.5,0.5h2.4
+                        c0.3,0,0.5-0.2,0.5-0.5v-4.3c0-0.1,0-0.1,0-0.2V7.1z M59.7,15.1l-4.3-2.5v-5l4.3-2.5L64,7.6v3.3c0,0,0,0.1,0,0.1v1.5L59.7,15.1z"
+                        />
+                     <path d="M45.3,16.7l-1.2-2.1c-0.1-0.2-0.1-0.6,0.2-0.7l2.4-1.4v-5L42.4,5l-4.3,2.5v5l2.3,1.4c0.2,0.1,0.3,0.5,0.2,0.7
+                        l-1.2,2.1c-0.1,0.2-0.5,0.3-0.7,0.2l-2.8-1.6c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l5.1-3c0.8-0.5,1.8-0.5,2.6,0
+                        l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3V13c0,0.9-0.5,1.8-1.3,2.3L46,16.9C45.8,17,45.5,16.9,45.3,16.7z"/>
+                     <path d="M126.7,18.6c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l2.4-1.4
+                        c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1c0.1,0.2,0.1,0.6-0.2,0.7l-1.9,1.1v5l4.3,2.5l4.7-2.7c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1
+                        c0.1,0.2,0.1,0.6-0.2,0.7l-5.1,3C127.6,18.5,127.2,18.6,126.7,18.6z"/>
                   </g>
-                  <g>
-                     <path class="st0" d="M24.9,5.2l4.2,2.4v4.8l-4.2,2.4l-4.2-2.4V7.6L24.9,5.2 M24.9,1.5c-0.4,0-0.8,0.1-1.1,0.3l-5.6,3.2
-                        c-0.6,0.3-1.1,1.2-1.1,1.9v6.4c0,0.7,0.5,1.5,1.1,1.9l5.6,3.2c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0,0.8-0.1,1.1-0.3l5.6-3.2
-                        c0.6-0.3,1.1-1.2,1.1-1.9V6.8c0-0.7-0.5-1.5-1.1-1.9L26,1.7C25.7,1.6,25.3,1.5,24.9,1.5L24.9,1.5z"/>
-                  </g>
-                  <path class="st0" d="M66.3,4.9l-5.6-3.2c-0.3-0.2-0.7-0.3-1.1-0.3c-0.4,0-0.8,0.1-1.1,0.3L53,4.9C52.4,5.3,52,6.1,52,6.8v6.4
-                     c0,0.7,0.5,1.5,1.1,1.9l5.6,3.2c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0,0.8-0.1,1.1-0.3l3.1-1.8v1.4c0,0.3,0.2,0.5,0.5,0.5h2.5
-                     c0.3,0,0.5-0.2,0.5-0.5v-4.7v-2V6.8C67.4,6.1,66.9,5.3,66.3,4.9z M59.7,14.8l-4.2-2.4V7.6l4.2-2.4l4.2,2.4v3.7v1.2L59.7,14.8z"/>
-                  <path class="st0" d="M90.2,7.5l3.8-2.2c0.1-0.1,0.2-0.1,0.4,0l3.8,2.2c0.1,0,0.1,0,0.2,0h3.2c0.2,0,0.4-0.2,0.4-0.4V7
-                     c0-0.8-0.6-1.8-1.3-2.2l-5.4-3.1c-0.3-0.2-0.7-0.3-1.1-0.3c-0.4,0-0.8,0.1-1.1,0.3l-5.4,3.1c-0.7,0.4-1.3,1.4-1.3,2.2v6
-                     c0,0.8,0.6,1.8,1.3,2.2l5.4,3.1c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0,0.8-0.1,1.1-0.3l5.4-3.1c0.7-0.4,1.3-1.4,1.3-2.2v-0.2
-                     c0-0.2-0.2-0.4-0.4-0.4h-3.2c-0.1,0-0.1,0-0.2,0l-3.8,2.2c-0.1,0.1-0.2,0.1-0.4,0l-3.8-2.2c-0.1-0.1-0.2-0.2-0.2-0.3v-0.4h5.3
-                     c0.3,0,0.5-0.2,0.5-0.5V8.8c0-0.3-0.2-0.5-0.5-0.5h-5.3V7.8C90.1,7.7,90.1,7.6,90.2,7.5z"/>
-                  <path class="st0" d="M83.5,5l-5.4-3.1c-0.3-0.2-0.7-0.3-1.1-0.3c-0.4,0-0.8,0.1-1.1,0.3L70.6,5c-0.7,0.4-1.3,1.4-1.3,2.2v2.4
-                     c0,0.2,0.2,0.4,0.4,0.4h2.8c0.2,0,0.4-0.2,0.4-0.4V8c0-0.1,0.1-0.2,0.2-0.3l2.1-1.2v10.5c0,0.9,0.7,1.6,1.6,1.6h0.4
-                     c0.9,0,1.6-0.7,1.6-1.6V6.4L81,7.7c0.1,0.1,0.2,0.2,0.2,0.3v1.6c0,0.2,0.2,0.4,0.4,0.4h2.8c0.2,0,0.4-0.2,0.4-0.4V7.2
-                     C84.8,6.4,84.2,5.4,83.5,5z"/>
-                  <g>
-                     <path class="st0" d="M142.3,5.2l4.2,2.4v4.8l-4.2,2.4l-4.2-2.4V7.6L142.3,5.2 M142.3,1.5c-0.4,0-0.8,0.1-1.1,0.3l-5.6,3.2
-                        c-0.6,0.3-1.1,1.2-1.1,1.9v6.4c0,0.7,0.5,1.5,1.1,1.9l5.6,3.2c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0,0.8-0.1,1.1-0.3l5.6-3.2
-                        c0.6-0.3,1.1-1.2,1.1-1.9V6.8c0-0.7-0.5-1.5-1.1-1.9l-5.6-3.2C143.1,1.6,142.7,1.5,142.3,1.5L142.3,1.5z"/>
-                  </g>
-                  <g>
-                     <path class="st0" d="M48.7,5l-5.4-3.1c-0.3-0.2-0.7-0.3-1.1-0.3c-0.4,0-0.8,0.1-1.1,0.3L35.8,5c-0.7,0.4-1.3,1.4-1.3,2.2v6
-                        c0,0.8,0.6,1.8,1.3,2.2l4.2,2.4c0.2,0.1,0.5,0,0.5-0.3v-3.3c0-0.1-0.1-0.2-0.2-0.3l-2-1.2c-0.1-0.1-0.2-0.2-0.2-0.3V8
-                        c0-0.1,0.1-0.2,0.2-0.3l3.8-2.2c0.1-0.1,0.2-0.1,0.4,0l3.8,2.2c0.1,0.1,0.2,0.2,0.2,0.3v4.4c0,0.1-0.1,0.2-0.2,0.3l-2,1.2
-                        c-0.1,0.1-0.2,0.2-0.2,0.3v3.3c0,0.3,0.3,0.4,0.5,0.3l4.2-2.4C49.4,15,50,14,50,13.2v-6C50,6.4,49.4,5.4,48.7,5z"/>
-                  </g>
-                  <path class="st0" d="M118.1,14.8l-3.2-1.7c-0.1,0-0.2,0-0.2,0l-3.1,1.8c-0.1,0-0.2,0-0.2,0l-3.9-2.3c-0.1,0-0.1-0.1-0.1-0.2V5.9
-                     c0,0,0,0,0,0V3.5V2.9V2c0-0.2-0.1-0.3-0.3-0.2l-1.7,1c0,0,0,0,0,0L105,3c-0.7,0.4-1.2,1.3-1.2,2.1v8.2c0,0.8,0.5,1.7,1.2,2.1
-                     l5.4,3.1c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0,0.8-0.1,1.1-0.3l5.6-3.2c0,0,0,0,0,0C118.3,15.2,118.3,14.9,118.1,14.8z"/>
-                  <path class="st0" d="M133.5,14.8l-3.2-1.7c-0.1,0-0.2,0-0.2,0l-3.1,1.8c-0.1,0-0.2,0-0.2,0l-3.9-2.3c-0.1,0-0.1-0.1-0.1-0.2V5.9
-                     c0,0,0,0,0,0V3.5V3.4V2c0-0.2-0.1-0.3-0.3-0.2l-1.5,0.9l0,0L120.3,3c-0.7,0.4-1.2,1.3-1.2,2.1v8.2c0,0.8,0.5,1.7,1.2,2.1l5.4,3.1
-                     c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0,0.8-0.1,1.1-0.3l5.6-3.2c0,0,0,0,0,0C133.7,15.2,133.7,14.9,133.5,14.8z"/>
-               </g>
             </svg>
          </a>
       </p>
