--- a/donatello.com/inquiry/index.html
+++ b/donatello.com/inquiry/index.html
@@ -9,6 +9,16 @@
 
 <head>
        <meta charset="UTF-8">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59181904-2"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-59181904-2');
+      </script>
+     
       <meta http-equiv="X-UA-Compatible" content="IE=Edge"> 
       <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1"> 
       <!-- ***** my style -->
@@ -48,6 +58,7 @@
       <p class="siteHeader_logo">
          <a href="../">
             <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="150px" height="20px" viewBox="0 0 150 20" xml:space="preserve">
+               <g>
                   <g>
                      <path d="M14.2,4.7l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3C0.5,5.1,0,6,0,6.9v5.9c0,0.9,0.5,1.8,1.3,2.3l5.1,3
                         c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l5.1-3c0.8-0.5,1.3-1.4,1.3-2.3V6.9C15.5,6,15,5.1,14.2,4.7z M12.1,12.4l-4.3,2.5
@@ -79,7 +90,8 @@
                      <path d="M126.7,18.6c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l2.4-1.4
                         c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1c0.1,0.2,0.1,0.6-0.2,0.7l-1.9,1.1v5l4.3,2.5l4.7-2.7c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1
                         c0.1,0.2,0.1,0.6-0.2,0.7l-5.1,3C127.6,18.5,127.2,18.6,126.7,18.6z"/>
-                  </g>
+                  </g>               
+               </g>
             </svg>
          </a>
       </p>
