--- a/donatello.com/works/index.html
+++ b/donatello.com/works/index.html
@@ -3,7 +3,7 @@
 <html lang="ja" class="ie">
 <![endif]-->
 <!--[if !IE]<!-->
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
 <!--<![endif]-->
    
 
@@ -38,17 +38,18 @@
       <title>WORKS 実績 | Donatello 東京のSES、システム開発、エンジニア育成</title>
       <meta name="keywords" content="東京,システム開発,Java,求人,新卒採用,エンジニアプログラマー,未経験">
       <meta name="description" content="ディスクリプション">
-      <meta property="og:title" content="og title">
-      <meta property="og:site_name" content="og sitenmae">
-      <meta property="og:description" content="og desc">
+      <meta property="og:title" content="Donatello 東京のシステム開発会社 SESによるエンジニア(SE)就職支援">
+      <meta property="og:site_name" content="Donatello co.Ltd">
+      <meta property="og:description" content="受託システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援する会社">
       <meta property="og:type" content="website">
-      <meta property="og:image" content="image">
-      <meta property="og:url" content="og url">
+      <meta property="og:image" content="http://donatello.jp/common/img/ogp.jpg">
+      <meta property="og:url" content="http://donatello.jp/">
+      <meta property="fb:app_id" content="341652896351256">
+      <meta property="article:publisher" content="https://www.facebook.com/%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BEDonatello-1103021019747652/">
       <meta name="twitter:card" content="summary">
       <!-- <meta name="twitter:site" content="@flickr" > -->
-      <meta name="twitter:title" content="">
-      <meta name="twitter:description" content="twitter: des">
-      <meta name="twitter:image" content="">
+      <meta name="twitter:title" content="Donatello">
+      <meta name="twitter:description" content="受託システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援する会社">
       <link rel="shortcut icon" href="../common/img/favicon.png"> 
 </head>
 <body class="works">
@@ -57,7 +58,7 @@
    <header class="siteHeader">
    <div class="wrap">
       
-      <h1 class="siteHeader_word">Donatello - 東京の受託システム開発（Java）、SE/プログラマーのSES、</h1>
+      <h1 class="siteHeader_word">Donatello - 東京の受託システム/アプリ開発、SE/プログラマーのSES</h1>
       
       <p class="siteHeader_logo">
          <a href="../">
@@ -455,7 +456,7 @@
             <section>
                <header>
                   <h2 class="siteFooter_info">
-                     Donatello - 東京の受託システム開発（Java）、SE/プログラマーのSES、
+                     Donatello - 東京の受託システム/アプリ開発、SE/プログラマーのSES
                   </h2>
                </header>
                <div class="siteFooter_address">
