--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -3,7 +3,7 @@
 <html lang="ja" class="ie">
 <![endif]-->
 <!--[if !IE]<!-->
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
    <!--<![endif]-->
       
 
@@ -38,17 +38,18 @@
       <title>Donatello 東京のシステム開発会社 SESによるエンジニア(SE)就職支援</title>
       <meta name="keywords" content="東京,システム開発,Java,求人,新卒採用,エンジニアプログラマー,未経験">
       <meta name="description" content="システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援">
-      <meta property="og:title" content="og title">
-      <meta property="og:site_name" content="og sitenmae">
-      <meta property="og:description" content="og desc">
+      <meta property="og:title" content="Donatello 東京のシステム開発会社 SESによるエンジニア(SE)就職支援">
+      <meta property="og:site_name" content="Donatello co.Ltd">
+      <meta property="og:description" content="受託システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援する会社">
       <meta property="og:type" content="website">
-      <meta property="og:image" content="image">
-      <meta property="og:url" content="og url">
+      <meta property="og:image" content="http://donatello.jp/common/img/ogp.jpg">
+      <meta property="og:url" content="http://donatello.jp/">
+      <meta property="fb:app_id" content="341652896351256">
+      <meta property="article:publisher" content="https://www.facebook.com/%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BEDonatello-1103021019747652/">
       <meta name="twitter:card" content="summary">
       <!-- <meta name="twitter:site" content="@flickr" > -->
-      <meta name="twitter:title" content="">
-      <meta name="twitter:description" content="twitter: des">
-      <meta name="twitter:image" content="">
+      <meta name="twitter:title" content="Donatello">
+      <meta name="twitter:description" content="受託システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援する会社">
       <link rel="shortcut icon" href="common/img/favicon.png"> 
    </head>
    <body class="index">
@@ -145,10 +146,10 @@
          </section>
          <section class="introduction">
             <div class="wrap">
-               <header class="introduction_index ef ef-dup">
+               <header class="introduction_index">
                   <h3>"DEVELOP FOR THE FURUTE."</h3>
                </header>
-               <p class="introduction_content ef ef-floatup" data-delay='0.2' >
+               <p class="introduction_content" >
                   私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
                   業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
                </p>
@@ -223,7 +224,7 @@
             <section>
                <header>
                   <h2 class="siteFooter_info">
-                     Donatello - 東京の受託システム開発（Java）、SE/プログラマーのSES、
+                     Donatello - 東京の受託システム/アプリ開発、SE/プログラマーのSES
                   </h2>
                </header>
                <div class="siteFooter_address">
