business テキスト修正

--- a/donatello.com/business/index.html
+++ b/donatello.com/business/index.html
@@ -378,7 +378,7 @@
                <text x="150" y="19" fill="url(#gradation)">SUPPORTED LANGUAGE</text></svg></span>
             </span>
             <span class="section_index_ja">
-              会社概要
+              使用言語
            </span>
         </h3>
      </header>
@@ -402,10 +402,6 @@
       <tr>
          <th>その他</th>
          <td>Excel / Access VBA</td>
-      </tr>
-      <tr>
-         <th>従業員数</th> 
-         <td>5名（契約社員・パートナー含む）</td>
       </tr>
    </table>
 </div>
