--- a/donatello.com/inquiry/index.html
+++ b/donatello.com/inquiry/index.html
@@ -52,60 +52,56 @@
    <div id="loadingAnim"><svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90.302px" height="100px" viewBox="0 0 90.302 100" xml:space="preserve"><circle class="loadingAnim_circle" cx="0" cy="0" r="5"><animateMotion dur="2s" repeatCount="indefinite"><mpath xlink:href="#targetPath"></mpath></animateMotion></circle><path id="targetPath" class="loadingAnim_path" d="M45.151,2.91c-2.152,0-4.298,0.466-5.924,1.41L8.552,22.028c-3.258,1.881-5.925,6.499-5.925,10.261v35.423 c0,3.762,2.667,8.38,5.925,10.261l30.674,17.709c1.626,0.943, .772,1.408,5.924,1.408c2.146,0,4.293-0.465,5.924-1.408 l30.67-17.709c3.263-1.881,5.93-6.499,5.93-10.261V32.289c0-.762-2.667-8.38-5.93-10.261L51.075,4.319 C49.444,3.375,47.296,2.91,45.151,2.91L45.151,2.91z"/><text class="loadnigAnim_text" x="46.5" y="55" text-anchor="middle">LOADING..</text></svg></div>   
    <!-- ***** header  -->
    <header class="siteHeader">
-   <div class="wrap">
-      
-      <h1 class="siteHeader_word">Donatello - 東京の受託システム/アプリ開発、SE/プログラマーのSES</h1>
-      
-      <p class="siteHeader_logo">
-         <a href="../">
-            <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="150px" height="20px" viewBox="0 0 150 20" xml:space="preserve">
-               <g>
-                  <g>
-                     <path d="M14.2,4.7l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3C0.5,5.1,0,6,0,6.9v5.9c0,0.9,0.5,1.8,1.3,2.3l5.1,3
-                        c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l5.1-3c0.8-0.5,1.3-1.4,1.3-2.3V6.9C15.5,6,15,5.1,14.2,4.7z M12.1,12.4l-4.3,2.5
-                        v-10l4.3,2.5V12.4z"/>
-                     <path d="M25,18.5c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V6.9c0-0.9,0.5-1.8,1.3-2.3l5.1-3
-                        c0.8-0.5,1.8-0.5,2.6,0l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3v5.9c0,0.9-0.5,1.8-1.3,2.3l-5.1,3C25.9,18.3,25.5,18.5,25,18.5z M20.7,12.4
-                        l4.3,2.5l4.3-2.5v-5L25,4.9l-4.3,2.5V12.4z M29.8,12.2C29.8,12.2,29.8,12.2,29.8,12.2L29.8,12.2z"/>
-                     <path d="M98.5,8.4h2.9c0.1,0,0.3-0.1,0.3-0.3V7.2c0-0.9-0.5-1.8-1.3-2.3L95.3,2c-0.8-0.5-1.8-0.5-2.6,0l-5.1,2.9
-                        c-0.8,0.5-1.3,1.4-1.3,2.3v5.9c0,0.9,0.5,1.8,1.3,2.3l5.1,2.9c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l5.1-2.9
-                        c0.8-0.5,1.3-1.4,1.3-2.3v-0.8c0-0.1-0.1-0.3-0.3-0.3h-2.9c-0.1,0-0.3,0.1-0.3,0.3v0.4L94,15.1l-4.3-2.5v-0.7
-                        c0.1,0,0.1,0.1,0.2,0.1H95c0.3,0,0.5-0.2,0.5-0.5V9c0-0.3-0.2-0.5-0.5-0.5h-5.1c-0.1,0-0.2,0-0.2,0.1V7.7L94,5.2l4.3,2.5v0.5
-                        C98.2,8.3,98.4,8.4,98.5,8.4z"/>
-                     <path d="M142.2,18.6c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l5.1-3
-                        c0.8-0.5,1.8-0.5,2.6,0l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3V13c0,0.9-0.5,1.8-1.3,2.3l-5.1,3C143.2,18.5,142.7,18.6,142.2,18.6z
-                         M137.9,12.5l4.3,2.5l4.3-2.5v-5L142.2,5l-4.3,2.5V12.5z M147,12.3C147,12.3,147,12.3,147,12.3L147,12.3z"/>
-                     <path d="M83.3,4.7l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3c-0.8,0.5-1.3,1.4-1.3,2.3v2.7c0,0.3,0.2,0.5,0.5,0.5H72
-                        c0.3,0,0.5-0.2,0.5-0.5V7.4l2.6-1.5v12.1c0,0.3,0.2,0.5,0.5,0.5H78c0.3,0,0.5-0.2,0.5-0.5V5.9l2.6,1.5v2.2c0,0.3,0.2,0.5,0.5,0.5
-                        h2.4c0.3,0,0.5-0.2,0.5-0.5V6.9C84.6,6,84.1,5.1,83.3,4.7z"/>
-                     <path d="M111.2,18.6c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l2.4-1.4
-                        c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1c0.1,0.2,0.1,0.6-0.2,0.7l-1.9,1.1v5l4.3,2.5l4.7-2.7c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1
-                        c0.1,0.2,0.1,0.6-0.2,0.7l-5.1,3C112.1,18.5,111.6,18.6,111.2,18.6z"/>
-                     <path d="M67.4,7.1c0-0.9-0.5-1.8-1.3-2.3l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3c-0.8,0.5-1.3,1.4-1.3,2.3V13
-                        c0,0.9,0.5,1.8,1.3,2.3l5.1,3c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l3-1.7v1c0,0.3,0.2,0.5,0.5,0.5h2.4
-                        c0.3,0,0.5-0.2,0.5-0.5v-4.3c0-0.1,0-0.1,0-0.2V7.1z M59.7,15.1l-4.3-2.5v-5l4.3-2.5L64,7.6v3.3c0,0,0,0.1,0,0.1v1.5L59.7,15.1z"
-                        />
-                     <path d="M45.3,16.7l-1.2-2.1c-0.1-0.2-0.1-0.6,0.2-0.7l2.4-1.4v-5L42.4,5l-4.3,2.5v5l2.3,1.4c0.2,0.1,0.3,0.5,0.2,0.7
-                        l-1.2,2.1c-0.1,0.2-0.5,0.3-0.7,0.2l-2.8-1.6c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l5.1-3c0.8-0.5,1.8-0.5,2.6,0
-                        l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3V13c0,0.9-0.5,1.8-1.3,2.3L46,16.9C45.8,17,45.5,16.9,45.3,16.7z"/>
-                     <path d="M126.7,18.6c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V7c0-0.9,0.5-1.8,1.3-2.3l2.4-1.4
-                        c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1c0.1,0.2,0.1,0.6-0.2,0.7l-1.9,1.1v5l4.3,2.5l4.7-2.7c0.2-0.1,0.6-0.1,0.7,0.2l1.2,2.1
-                        c0.1,0.2,0.1,0.6-0.2,0.7l-5.1,3C127.6,18.5,127.2,18.6,126.7,18.6z"/>
-                  </g>               
-               </g>
-            </svg>
-         </a>
-      </p>
-      <nav class="siteHeader_nav">
-         <ul class="nav">
-            <li><a href="/about/">会社概要</a></li>
-            <li><a href="/business/">事業内容</a></li>
-            <li><a href="/works/">実績</a></li>
-            <li><a href="/recruit/">採用情報</a></li>
-            <li class="current"><a href="/inquiry/">お問い合わせ</a></li>
-         </ul>
-      </nav>
-   </div>
+<div class="wrap">
+   
+   <h1 class="siteHeader_word">Donatello - 東京の受託システム/アプリ開発、SE/プログラマーのSES</h1>
+   
+   <p class="siteHeader_logo">
+      <a href="../">
+         <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="150px" height="20px" viewBox="0 0 150 20" xml:space="preserve">
+            <path class="st0" d="M14.3,4.6l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3C0.6,5,0.1,5.9,0.1,6.8v5.9c0,0.9,0.5,1.8,1.3,2.3l5.1,3
+            c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l5.1-3c0.8-0.5,1.3-1.4,1.3-2.3V6.8C15.6,5.9,15,5,14.3,4.6z M12.1,12.3l-4.3,2.5
+            v-10l4.3,2.5V12.3z"/>
+            <path class="st0" d="M25.1,18.3c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V6.8c0-0.9,0.5-1.8,1.3-2.3l5.1-3
+            c0.8-0.5,1.8-0.5,2.6,0l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3v5.9c0,0.9-0.5,1.8-1.3,2.3l-5.1,3C26,18.2,25.5,18.3,25.1,18.3z M20.8,12.3
+            l4.3,2.5l4.3-2.5v-5l-4.3-2.5l-4.3,2.5V12.3z M29.8,12C29.8,12,29.8,12,29.8,12L29.8,12z"/>
+            <path class="st0" d="M117.8,14.3l-1.2-2.1c-0.1-0.2-0.5-0.3-0.7-0.2l-4.6,2.7c-0.1,0-0.1,0-0.2,0l-4.1-2.4c-0.1,0-0.1-0.1-0.1-0.1
+            V1.9c0-0.3-0.2-0.5-0.5-0.5h-2.4c-0.3,0-0.5,0.2-0.5,0.5v10.9c0,0.9,0.5,1.8,1.3,2.3l5.1,3c0.4,0.2,0.9,0.3,1.3,0.3
+            c0.5,0,0.9-0.1,1.3-0.3l5.1-3C117.8,14.9,117.9,14.6,117.8,14.3z"/>
+            <path class="st0" d="M133.3,14.3l-1.2-2.1c-0.1-0.2-0.5-0.3-0.7-0.2l-4.6,2.7c-0.1,0-0.1,0-0.2,0l-4.1-2.4c-0.1,0-0.1-0.1-0.1-0.1
+            V1.9c0-0.3-0.2-0.5-0.5-0.5h-2.4c-0.3,0-0.5,0.2-0.5,0.5v10.9c0,0.9,0.5,1.8,1.3,2.3l5.1,3c0.4,0.2,0.9,0.3,1.3,0.3
+            c0.5,0,0.9-0.1,1.3-0.3l5.1-3C133.4,14.9,133.4,14.6,133.3,14.3z"/>
+            <path class="st0" d="M98.7,8.1h2.4c0.3,0,0.5-0.2,0.5-0.5V6.9c0-0.9-0.5-1.8-1.3-2.3l-5.1-2.9c-0.8-0.5-1.8-0.5-2.6,0l-5.1,2.9
+            c-0.8,0.5-1.3,1.4-1.3,2.3v5.9c0,0.9,0.5,1.8,1.3,2.3l5.1,2.9c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l5.1-2.9
+            c0.8-0.5,1.3-1.4,1.3-2.3v-0.6c0-0.3-0.2-0.5-0.5-0.5h-2.5c-0.3,0-0.5,0.2-0.5,0.5v0c0,0.1,0,0.1-0.1,0.1L94,14.7
+            c-0.1,0-0.1,0-0.2,0l-4.1-2.4c-0.1,0-0.1-0.1-0.1-0.1v-0.6c0.1,0,0.1,0.1,0.2,0.1h4.9c0.4,0,0.7-0.3,0.7-0.7V8.9
+            c0-0.4-0.3-0.7-0.7-0.7h-4.9c-0.1,0-0.2,0-0.2,0.1V7.5c0-0.1,0-0.1,0.1-0.1L93.9,5c0.1,0,0.1,0,0.2,0l4.1,2.4c0.1,0,0.1,0.1,0.1,0.1
+            v0.1C98.2,7.9,98.5,8.1,98.7,8.1z"/>
+            <path class="st0" d="M142.2,18.3c-0.5,0-0.9-0.1-1.3-0.3l-5.1-3c-0.8-0.5-1.3-1.4-1.3-2.3V6.8c0-0.9,0.5-1.8,1.3-2.3l5.1-3
+            c0.8-0.5,1.8-0.5,2.6,0l5.1,3c0.8,0.5,1.3,1.4,1.3,2.3v5.9c0,0.9-0.5,1.8-1.3,2.3l-5.1,3C143.1,18.2,142.6,18.3,142.2,18.3z
+            M137.9,12.3l4.3,2.5l4.3-2.5v-5l-4.3-2.5l-4.3,2.5V12.3z M146.9,12C146.9,12,146.9,12,146.9,12L146.9,12z"/>
+            <path class="st0" d="M83.3,4.4l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3c-0.8,0.5-1.3,1.4-1.3,2.3v2.7c0,0.3,0.2,0.5,0.5,0.5H72
+            c0.3,0,0.5-0.2,0.5-0.5V7.2l2.6-1.5v12.1c0,0.3,0.2,0.5,0.5,0.5H78c0.3,0,0.5-0.2,0.5-0.5V5.7l2.6,1.5v2.2c0,0.3,0.2,0.5,0.5,0.5
+            h2.4c0.3,0,0.5-0.2,0.5-0.5V6.7C84.6,5.8,84.1,4.9,83.3,4.4z"/>
+            <path class="st0" d="M67.5,6.8c0-0.9-0.5-1.8-1.3-2.3l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3c-0.8,0.5-1.3,1.4-1.3,2.3v5.9
+            c0,0.9,0.5,1.8,1.3,2.3l5.1,3c0.4,0.2,0.9,0.3,1.3,0.3c0.5,0,0.9-0.1,1.3-0.3l3-1.7v1.5c0,0.3,0.2,0.5,0.5,0.5h2.4
+            c0.3,0,0.5-0.2,0.5-0.5V13c0-0.1,0-0.1,0-0.2V6.8z M59.7,14.8l-4.3-2.5v-5l4.3-2.5L64,7.3v3.3c0,0,0,0.1,0,0.1v1.5L59.7,14.8z"/>
+            <path class="st0" d="M38.1,17.8V7.4l4.3-2.5l4.3,2.5v10.4c0,0.3,0.2,0.5,0.5,0.5h2.4c0.3,0,0.5-0.2,0.5-0.5V6.9
+            c0-0.9-0.5-1.8-1.3-2.3l-5.1-3c-0.8-0.5-1.8-0.5-2.6,0l-5.1,3c-0.8,0.5-1.3,1.3-1.3,2.3v10.9c0,0.3,0.2,0.5,0.5,0.5h2.4
+            C37.9,18.3,38.1,18.1,38.1,17.8z"/>
+         </svg>
+      </a>
+   </p>
+   <nav class="siteHeader_nav">
+      <ul class="nav">
+         <li><a href="/about/">会社概要</a></li>
+         <li><a href="/business/">事業内容</a></li>
+         <li><a href="/works/">実績</a></li>
+         <li><a href="/recruit/">採用情報</a></li>
+         <li class="current"><a href="/inquiry/">お問い合わせ</a></li>
+      </ul>
+   </nav>
+</div>
 </header>
    <!-- ///// header  -->
    <div id="fetchContent" data-content="inquiry">
